fix markets view layout issues
Fixes issues where overflow and div sizing were acting weird on resize.
Creates and uses a stylish scrollbar class. Enables manual chart
div resizing and remembers the user's preference across sessions.

Also correct a recent regression where certain order form elements
were not being hidden for market orders.

--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -49,7 +49,7 @@ div.settingsforms {
 #marketChart {
   position: relative;
   background-color: white;
-  height: 250px;
+  height: 40%;
   border-bottom: 1px solid #626262;
 }
 
@@ -64,9 +64,16 @@ div.settingsforms {
   font-size: 40px;
 }
 
+#chartResizer {
+  position: absolute;
+  bottom: 0;
+  height: 6px;
+  width: 100%;
+  z-index: 2;
+  cursor: ns-resize;
+}
+
 .marketorders {
-  display: block;
-  min-height: 375px;
   overflow: hidden;
 }
 
@@ -325,6 +332,7 @@ table.balance-table button:hover {
   th,
   td {
     padding: 2px 10px;
+    white-space: nowrap;
   }
 
   .ico-cross {
